# rustpjm

./: .funcignore  .gitignore  Cargo.toml  compile_deploy.sh  host.json
queueTriggerDA/: function.json
queueTriggerRTunverf/: function.json
queueTriggerRTverf/: function.json
src/: errors.rs  main.rs  pjmendpoints.rs  utils.rs
src/routes/: mod.rs
src/routes/queue_triggers/: axum_handlers.rs  dbfuncs.rs  mod.rs  parser_utils.rs  parsers.rs
src/routes/timer_triggers/: axum_handlers.rs  mod.rs  rt_to_day.rs
src/structs/: az_functions.rs  cust.rs  mod.rs
